--- a/01-write-hello-world-with-raw-react-apis/index.html
+++ b/01-write-hello-world-with-raw-react-apis/index.html
@@ -1,20 +1,45 @@
 <body>
-<div id="root"></div>
-<script src="https://unpkg.com/react@16.0.0-rc.3/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@16.0.0-rc.3/umd/react-dom.development.js"></script>
-<script type="text/javascript">
-const rootElement = document.getElementById(
-  'root',
-)
-// const element = document.createElement('div')
-// element.textContent = 'Hello World'
-// element.className = 'container'
-// rootElement.appendChild(element)
-const element = React.createElement('div', {
-  className: 'container',
-  children: 'Hello World',
-})
-console.log(element)
-ReactDOM.render(element, rootElement)
-</script>
+  <div id="root"></div>
+  <!-- 通过外部script暴露React global-->
+  <script src="https://unpkg.com/react@16.0.0-rc.3/umd/react.development.js"></script>
+  <!-- 通过外部script暴露React-dom global-->
+  <script src="https://unpkg.com/react-dom@16.0.0-rc.3/umd/react-dom.development.js"></script>
+  <script type="text/javascript">
+    const rootElement = document.getElementById('root')
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World'
+    // element.className = 'container'
+    // rootElement.appendChild(element)
+
+    // Write Hello World with raw React APIs
+
+    // React.createElement语法
+    // Create and return a new React element of the given type. The type argument
+    // can be either a tag name string (such as 'div' or 'span'), a React
+    // component type (a class or a function), or a React fragment type.
+    // Code written with JSX will be converted to use React.createElement().
+    // You will not typically invoke React.createElement() directly if you are
+    // using JSX. See React Without JSX to learn more.
+    // React.createElement(
+    //   type,
+    //   [props],
+    //   [...children]
+    // )
+    const element1 = React.createElement('div', {
+        className: 'container',
+      },
+      // 创建element时传递的children，有趣的时，children也可以作为props写到第二个参数中
+      // 像下面elment2一样
+      'Hello World',
+      'Goodbye World',
+    )
+    const element2 = React.createElement('div', {
+      className: 'container',
+      children: ['Hello World', 'Goodbye World']
+    })
+    console.log(element1)
+    ReactDOM.render(element1, rootElement)
+    // console.log(element2)
+    // ReactDOM.render(element2, rootElement)
+  </script>
 </body>
